--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+  :root {
   --color-primary: #6741d9;
   --color-primary-light: #7950f2;
   --color-text: #dee2e6;
@@ -29,7 +29,7 @@ body {
   padding: 2.4rem;
 }
 
-/* ******* */
+
 
 .nav-bar {
   display: grid;
@@ -72,7 +72,7 @@ body {
   padding: 4.8rem;
 }
 
-/* ******* */
+
 
 .logo {
   display: flex;
@@ -100,7 +100,7 @@ body {
   transition: all 0.3s;
   color: var(--color-text);
 
-  /* background-color: var(--color-background-900); */
+  background-color: var(--color-background-900); 
   background-color: var(--color-primary-light);
 }
 
@@ -208,7 +208,6 @@ body {
   background-color: var(--color-red-dark);
 }
 
-/* ******* */
 
 .summary {
   padding: 2.2rem 3.2rem 1.8rem 3.2rem;
@@ -237,7 +236,7 @@ body {
   gap: 0.8rem;
 }
 
-/* ******* */
+
 
 .details {
   line-height: 1.4;
@@ -325,7 +324,7 @@ body {
   aspect-ratio: 1;
   border-radius: 50%;
   border: none;
-  /* background-color: var(--color-text); */
+  background-color: var(--color-text); 
   background-color: #fff;
   color: var(--color-background-500);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
@@ -347,4 +346,14 @@ body {
   background-color: #adb5bd;
   height: 300px;
   position: absolute;
-}
+}  
+
+
+
+
+
+
+
+
+
+
