--- a/src/index.css
+++ b/src/index.css
@@ -317,25 +317,18 @@ body {
 }
 
 .btn-back {
-  position: absolute;
-  top: 0.6rem;
-  left: 0.6rem;
-  height: 3.2rem;
-  aspect-ratio: 1;
-  border-radius: 50%;
+  border-radius: 20%;
   border: none;
   background-color: var(--color-text); 
   background-color: #fff;
   color: var(--color-background-500);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
   font-family: sans-serif;
-  font-size: 2.4rem;
-  font-weight: bold;
+  font-weight: 900;
   cursor: pointer;
+  width: 60px;
+  height: 30px;
   z-index: 999;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 
