--- a/src/index.css
+++ b/src/index.css
@@ -319,16 +319,17 @@ body {
 .btn-back {
   border-radius: 20%;
   border: none;
-  background-color: var(--color-text); 
   background-color: #fff;
-  color: var(--color-background-500);
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
-  font-family: sans-serif;
   font-weight: 900;
   cursor: pointer;
-  width: 60px;
-  height: 30px;
+  width: 110px;
+  height: 70px;
   z-index: 999;
+  font-size: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 
